# dxrun

./: .gitignore  Cargo.toml  README.md
commands/firefox/: Dockerfile  docker-compose.yml
src/: command.rs  config.rs  main.rs
