[package]
name = "dxrun"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
dirs = "6.0"
log = "0.4"
rstaples = "0.3"
thiserror = "2.0"
which = "8.0"

[lints.clippy]
arithmetic_side_effects = "warn"
expect_used = "warn"
missing_errors_doc = "allow"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
