[package]
name = "dxrun"
version = "0.1.7"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
log = "0.4"
rstaples = "0.3"
thiserror = "2.0"
tokio = { version = "1.49.0", features = ["full"] }
which = "8.0"

[lints.clippy]
arithmetic_side_effects = "warn"
expect_used = "warn"
missing_errors_doc = "allow"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
